ingress.yaml
# Copyright 2016 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api
  namespace: default
spec:
  selector:
    matchLabels:
      app: fast-api
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      containers:
        - name: fast-api
          image: 761406923746.dkr.ecr.ap-northeast-2.amazonaws.com/terry:latest
          ports:
            - containerPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
    - host: fast-api.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fast-api
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fast-api
  namespace: kube-system
spec:
  type: ExternalName
  externalName: fast-api.default.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: fast-api
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    app: fast-api
